--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div>
+  <mat-toolbar class="app-toolbar">
+    <span>Vetnary App Dashboard</span>
+    <span class="example-spacer"></span>
+  </mat-toolbar>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
